fix: spacing issues

--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 @media (min-width: 1400px) {
@@ -17,11 +16,18 @@
 }
 @media (max-width: 1399px) {
   h1 {
-    font-size: 32px;
+    font-size: 2rem;
   }
 
   h2 {
     font-size: 26px;
+  }
+  .bannerImg-heading h1 {
+    font-size: 30px;
+  }
+  .bannerImg-heading {
+    display: flex;
+    align-items: center;
   }
 
   .container {
@@ -51,11 +57,8 @@
   .lab-members div:first-child img {
     width: 100%;
   }
-  #whole-team div:first-child {
-    flex: 2;
-  }
   #whole-team div:last-child {
-    flex: 1;
+    display: none;
   }
   .investigator-div > div:first-child img {
     width: 100%;
@@ -141,6 +144,9 @@
   .news-div > p,
   .news-div > h2 {
     padding: 0;
+  }
+  .news-div > h2 {
+    margin-bottom: 2rem;
   }
   .news-div > div {
     flex-direction: column;
